New: Tests implementation for Stack Class